// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`migrator snapshots (all field types) generates the expected sqlite migration file 1`] = `
"CREATE TABLE "everything" (
  "id" TEXT PRIMARY KEY NOT NULL,
  "created_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000),
  "updated_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000),
  "deleted_at" INTEGER,
  "title" TEXT NOT NULL,
  "title_localized" TEXT,
  "count" INTEGER NOT NULL,
  "weight" REAL,
  "is_published" INTEGER NOT NULL,
  "published_date" TEXT,
  "published_at" INTEGER NOT NULL,
  "schedule" TEXT,
  "runtime" INTEGER,
  "slug" TEXT,
  "status" TEXT NOT NULL,
  "tags" TEXT,
  "role" TEXT,
  "primary_color" TEXT,
  "body" TEXT,
  "snippet" TEXT,
  "secret_token" TEXT,
  "password_hash" TEXT,
  "metadata" TEXT,
  "sections" TEXT,
  "seo" TEXT,
  "cover" TEXT,
  "blocks" TEXT,
  "related" TEXT,
  "author_id" TEXT,
  "contributors" TEXT,
  "sort_key" REAL
);
CREATE UNIQUE INDEX "everything_slug_unique_idx" ON "everything" ("slug");

CREATE TABLE "settings" (
  "id" TEXT PRIMARY KEY NOT NULL,
  "created_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000),
  "updated_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000),
  "deleted_at" INTEGER,
  "site_name" TEXT,
  "primary_color" TEXT,
  CHECK ("id" = 'settings')
);

CREATE TABLE "voila_media" (
  "id" TEXT PRIMARY KEY NOT NULL,
  "key" TEXT NOT NULL,
  "filename" TEXT NOT NULL,
  "mime" TEXT NOT NULL,
  "size" INTEGER NOT NULL,
  "width" INTEGER,
  "height" INTEGER,
  "alt" TEXT,
  "created_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000)
);
CREATE UNIQUE INDEX "voila_media_key_unique_idx" ON "voila_media" ("key");

CREATE TABLE "voila_views" (
  "id" TEXT PRIMARY KEY NOT NULL,
  "collection" TEXT NOT NULL,
  "owner_id" TEXT NOT NULL,
  "name" TEXT NOT NULL,
  "type" TEXT NOT NULL,
  "config" TEXT NOT NULL,
  "is_default" INTEGER NOT NULL DEFAULT 0,
  "position" INTEGER NOT NULL DEFAULT 0,
  "created_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000),
  "updated_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000)
);
CREATE INDEX "voila_views_owner_collection_idx" ON "voila_views" ("owner_id", "collection");
"
`;

exports[`migrator snapshots (all field types) generates the expected postgres migration file 1`] = `
"CREATE TABLE "everything" (
  "id" TEXT PRIMARY KEY NOT NULL,
  "created_at" TIMESTAMPTZ NOT NULL DEFAULT now(),
  "updated_at" TIMESTAMPTZ NOT NULL DEFAULT now(),
  "deleted_at" TIMESTAMPTZ,
  "title" TEXT NOT NULL,
  "title_localized" JSONB,
  "count" BIGINT NOT NULL,
  "weight" DOUBLE PRECISION,
  "is_published" BOOLEAN NOT NULL,
  "published_date" DATE,
  "published_at" TIMESTAMPTZ NOT NULL,
  "schedule" TIME,
  "runtime" BIGINT,
  "slug" TEXT,
  "status" TEXT NOT NULL,
  "tags" JSONB,
  "role" TEXT,
  "primary_color" TEXT,
  "body" TEXT,
  "snippet" TEXT,
  "secret_token" TEXT,
  "password_hash" TEXT,
  "metadata" JSONB,
  "sections" JSONB,
  "seo" JSONB,
  "cover" JSONB,
  "blocks" JSONB,
  "related" JSONB,
  "author_id" TEXT,
  "contributors" JSONB,
  "sort_key" DOUBLE PRECISION
);
CREATE UNIQUE INDEX "everything_slug_unique_idx" ON "everything" ("slug");

CREATE TABLE "settings" (
  "id" TEXT PRIMARY KEY NOT NULL,
  "created_at" TIMESTAMPTZ NOT NULL DEFAULT now(),
  "updated_at" TIMESTAMPTZ NOT NULL DEFAULT now(),
  "deleted_at" TIMESTAMPTZ,
  "site_name" JSONB,
  "primary_color" TEXT,
  CHECK ("id" = 'settings')
);

CREATE TABLE "voila_media" (
  "id" TEXT PRIMARY KEY NOT NULL,
  "key" TEXT NOT NULL,
  "filename" TEXT NOT NULL,
  "mime" TEXT NOT NULL,
  "size" BIGINT NOT NULL,
  "width" BIGINT,
  "height" BIGINT,
  "alt" TEXT,
  "created_at" TIMESTAMPTZ NOT NULL DEFAULT now()
);
CREATE UNIQUE INDEX "voila_media_key_unique_idx" ON "voila_media" ("key");

CREATE TABLE "voila_views" (
  "id" TEXT PRIMARY KEY NOT NULL,
  "collection" TEXT NOT NULL,
  "owner_id" TEXT NOT NULL,
  "name" TEXT NOT NULL,
  "type" TEXT NOT NULL,
  "config" JSONB NOT NULL,
  "is_default" BOOLEAN NOT NULL DEFAULT false,
  "position" BIGINT NOT NULL DEFAULT 0,
  "created_at" TIMESTAMPTZ NOT NULL DEFAULT now(),
  "updated_at" TIMESTAMPTZ NOT NULL DEFAULT now()
);
CREATE INDEX "voila_views_owner_collection_idx" ON "voila_views" ("owner_id", "collection");
"
`;

exports[`migrator snapshots (all field types) applies the sqlite migration and produces the expected physical schema 1`] = `
"CREATE TABLE "everything" (
  "id" TEXT PRIMARY KEY NOT NULL,
  "created_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000),
  "updated_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000),
  "deleted_at" INTEGER,
  "title" TEXT NOT NULL,
  "title_localized" TEXT,
  "count" INTEGER NOT NULL,
  "weight" REAL,
  "is_published" INTEGER NOT NULL,
  "published_date" TEXT,
  "published_at" INTEGER NOT NULL,
  "schedule" TEXT,
  "runtime" INTEGER,
  "slug" TEXT,
  "status" TEXT NOT NULL,
  "tags" TEXT,
  "role" TEXT,
  "primary_color" TEXT,
  "body" TEXT,
  "snippet" TEXT,
  "secret_token" TEXT,
  "password_hash" TEXT,
  "metadata" TEXT,
  "sections" TEXT,
  "seo" TEXT,
  "cover" TEXT,
  "blocks" TEXT,
  "related" TEXT,
  "author_id" TEXT,
  "contributors" TEXT,
  "sort_key" REAL
)

CREATE TABLE "settings" (
  "id" TEXT PRIMARY KEY NOT NULL,
  "created_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000),
  "updated_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000),
  "deleted_at" INTEGER,
  "site_name" TEXT,
  "primary_color" TEXT,
  CHECK ("id" = 'settings')
)

CREATE TABLE "voila_media" (
  "id" TEXT PRIMARY KEY NOT NULL,
  "key" TEXT NOT NULL,
  "filename" TEXT NOT NULL,
  "mime" TEXT NOT NULL,
  "size" INTEGER NOT NULL,
  "width" INTEGER,
  "height" INTEGER,
  "alt" TEXT,
  "created_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000)
)

CREATE TABLE "voila_views" (
  "id" TEXT PRIMARY KEY NOT NULL,
  "collection" TEXT NOT NULL,
  "owner_id" TEXT NOT NULL,
  "name" TEXT NOT NULL,
  "type" TEXT NOT NULL,
  "config" TEXT NOT NULL,
  "is_default" INTEGER NOT NULL DEFAULT 0,
  "position" INTEGER NOT NULL DEFAULT 0,
  "created_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000),
  "updated_at" INTEGER NOT NULL DEFAULT (unixepoch() * 1000)
)

CREATE UNIQUE INDEX "everything_slug_unique_idx" ON "everything" ("slug")

CREATE UNIQUE INDEX "voila_media_key_unique_idx" ON "voila_media" ("key")

CREATE INDEX "voila_views_owner_collection_idx" ON "voila_views" ("owner_id", "collection")"
`;
